Make embeddingManager and vectors use fluent api, to improve readability