@@ -1,7 +1,9 @@
 package infosupport.be;
 
+import infosupport.be.util.EmbeddingManager;
+import infosupport.be.util.EmbeddingVector;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.ai.embedding.EmbeddingModel;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
@@ -13,31 +15,35 @@ import java.util.*;
 @Slf4j
 public class ModuleSevenApplication {
 
+    @Autowired
+    private EmbeddingManager embeddingManager;
+
     public static void main(String[] args) {
         SpringApplication.run(ModuleSevenApplication.class, args);
     }
 
     @Bean
-    public CommandLineRunner runner(
-            EmbeddingModel embeddingModel) {
+    public CommandLineRunner runner() {
         return args -> {
-            // Initialize the EmbeddingManager with initial terms
-            List<String> initialTerms = Arrays.asList("king", "queen", "man", "woman", "prince", "princess", "boy", "girl");
-            var embeddingManager = new EmbeddingManager(embeddingModel, initialTerms);
+            // Initialize some embeddings
+            var initialTerms = List.of("king", "queen", "man", "woman", "prince", "princess", "boy", "girl");
+            embeddingManager.embedNewTerms(initialTerms);
 
-            // Perform embedding arithmetic: vector1 = man - woman
-            float[] vector1 = embeddingManager.subtraction("man", "woman");
+            // Fluent API: Perform embedding arithmetic
+            EmbeddingVector result = embed("king").minus(embed("man").minus(embed("woman")));
 
-            // targetVector = king - vector1
-            float[] targetVector = embeddingManager.subtraction("king", vector1);
-
-            // Find the top 5 closest terms to the targetVector
-            List<Map.Entry<String, Double>> topResults = embeddingManager.findTopK(targetVector, 5);
+            // Find the top 5 closest terms to the resulting vector
+            var closestEmbeddings = embeddingManager.findTopK(result, 5, List.of("king", "man", "woman"));
 
             // Print the results
             System.out.println("Results for embedding arithmetic (king - (man - woman)):");
-            printResults(topResults);
+            printResults(closestEmbeddings);
         };
+    }
+
+    // Method to shorten embedding a term, to improve fluency
+    private EmbeddingVector embed(String term) {
+        return embeddingManager.valueOf(term);
     }
 
     // Method to print the results
